<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false"
    tools:context=".MainActivity">

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Your Task"
            android:layout_marginBottom="20dp"/>
        <TimePicker
        android:id="@+id/time_Picker"
        android:theme="@style/TimePickerTheme"
        android:layout_width="300dp"
        android:layout_height="350dp"
            android:layout_marginBottom="30dp"></TimePicker>
        <DatePicker
            android:id="@+id/date_Picker"
            android:theme="@style/TimePickerTheme"
            android:layout_width="300dp"
            android:layout_height="350dp"
            android:layout_marginBottom="30dp"></DatePicker>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="left"
            android:layout_marginTop="20dp">

            <CheckBox android:id="@+id/checkbox_Sat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_box_sat"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/checkbox_Sun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_box_sun"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/checkbox_Mon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_box_mon"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/checkbox_Tues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_box_tues"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/checkbox_Wed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_box_wed"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/checkbox_Thurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_box_thurs"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/checkbox_Fri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_box_fri"
                android:onClick="onCheckboxClicked"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="left"
            android:layout_marginTop="20dp">

            <RadioButton android:id="@+id/radio_button_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_sound"
                />
            <RadioButton android:id="@+id/radio_button_vibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_sound_vib"
                />
            <RadioButton android:id="@+id/radio_pirates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_sound_vib"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="add"
                android:layout_marginRight="45dp"/>
            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="cancel"/>


        </LinearLayout>
    </LinearLayout>



</ScrollView>